# rust-warp-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  build.rs  questions.json  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20250609003906_create_accounts_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  pagination.rs  question.rs
