[package]
name = "rust-web"
version = "1.0.0"
edition = "2024"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
handle-errors = { path = "handle-errors", version = "0.1.0" }
log = "0.4"
env_logger = "0.8"
log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = { version = "0.8", features = ["std"] }
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
config = { version = "0.13.1", features = ["toml"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
platforms = "2.0.0"